--- a/Frontend/app/src/main/res/layout/activity_aftercreatelobby.xml
+++ b/Frontend/app/src/main/res/layout/activity_aftercreatelobby.xml
@@ -3,48 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#974A94"> <!-- Yellow color example -->
 
-<!--    <ScrollView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        tools:layout_editor_absoluteX="-16dp">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/tx1"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="10dp"-->
-<!--            android:text="The players will appear here:\n"-->
-<!--            android:textSize="20dp" />-->
-<!--        -->
-
-<!--    </ScrollView>-->
-
-
-    <ScrollView
-        android:id="@+id/scrollViewMessages"
-        android:layout_width="match_parent"
-        android:layout_height="700dp"
-        android:layout_weight="1"
-        android:background="@null"
-        android:backgroundTint="#FFFFFF"
-        android:contentDescription="zone in reach the content of messages that is layed out"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+    <ImageView
+        android:id="@+id/imageView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498">
+        app:srcCompat="@drawable/gamelobbyheadertwo" />
 
-        <LinearLayout
-            android:id="@+id/layoutMessages"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <!-- Messages will be added here dynamically -->
-        </LinearLayout>
-    </ScrollView>
+    <ImageButton
+        android:id="@+id/imageView18"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
+        android:background="@null"
+        app:layout_constraintStart_toStartOf="@+id/imageView12"
+        app:layout_constraintTop_toBottomOf="@+id/imageView12"
+        app:srcCompat="@drawable/backbtn" />
+
+    <ImageView
+        android:id="@+id/imageView20"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="@+id/imageView18"
+        app:layout_constraintTop_toBottomOf="@+id/imageView18"
+        app:srcCompat="@drawable/waitingforplayer" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
