--- a/Frontend/app/src/main/res/layout/friends_msg_item2.xml
+++ b/Frontend/app/src/main/res/layout/friends_msg_item2.xml
@@ -3,19 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
-    android:background="@android:drawable/dialog_holo_dark_frame"
-    android:backgroundTint="#4CAF50"
+    android:backgroundTint="#D9D9D9"
     android:orientation="horizontal"
+    android:background="@drawable/usercontain"
+
     android:padding="20dp">
 
-    <Button
+    <TextView
         android:id="@+id/btnUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@null"
         android:backgroundTint="#91836e"
         android:text="Username"
-        android:textColor="#FFFFFF" />
+        android:textColor="#000000"
+       />
 
     <TextView
         android:id="@+id/placement"
@@ -24,8 +26,8 @@
         android:layout_marginStart="10dp"
         android:background="@null"
         android:padding="10dp"
-        android:textColor="#FFFFFF"
-        android:textColorHighlight="#FFFFFF"
+        android:textColor="#000000"
+        android:textColorHighlight="#000000"
         android:textColorHint="#FFFDFD"
         android:textColorLink="#FFFFFF"
         android:textSize="16sp" />
