made changes to AfterCreateLobby by removing unused code, adding test message, and adding back button. removed listener in AfterJoinLobby, fixed exchange in PlayActivity and cleaned code, fixed spectator layout, changed test activity,

--- a/Frontend/app/src/main/res/layout/activity_aftercreatelobby.xml
+++ b/Frontend/app/src/main/res/layout/activity_aftercreatelobby.xml
@@ -27,7 +27,7 @@
     <ScrollView
         android:id="@+id/scrollViewMessages"
         android:layout_width="match_parent"
-        android:layout_height="700dp"
+        android:layout_height="650dp"
         android:layout_weight="1"
         android:background="@null"
         android:backgroundTint="#FFFFFF"
@@ -37,7 +37,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498">
+        app:layout_constraintVertical_bias="0.86">
 
         <LinearLayout
             android:id="@+id/layoutMessages"
@@ -47,4 +47,15 @@
             <!-- Messages will be added here dynamically -->
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.01999998" />
 </androidx.constraintlayout.widget.ConstraintLayout>
