--- a/Frontend/app/src/main/res/layout/activity_test.xml
+++ b/Frontend/app/src/main/res/layout/activity_test.xml
@@ -9,7 +9,7 @@
         android:id="@+id/testBtn1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="pizza"
+        android:text="A"
         app:layout_constraintBottom_toTopOf="@+id/testBtn3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="152dp"
-        android:text="roll"
+        android:text="B"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
-        android:text="billy"
+        android:text="C"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +41,7 @@
         android:id="@+id/testBtn4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="man"
+        android:text="D"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
