--- a/Frontend/app/src/main/res/layout/activity_main_charles.xml
+++ b/Frontend/app/src/main/res/layout/activity_main_charles.xml
@@ -35,23 +35,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="51dp"
-        android:layout_marginEnd="1dp"
-        app:layout_constraintEnd_toEndOf="@+id/main_signup_btn"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8"
         android:background="@null"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView8"
         app:srcCompat="@drawable/logininbutton" />
 
     <ImageButton
         android:id="@+id/main_signup_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="82dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="95dp"
+        android:layout_marginTop="16dp"
+        android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/main_login_btn"
-        android:background="@null"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_login_btn"
+        app:layout_constraintVertical_bias="0.18"
         app:srcCompat="@drawable/signup" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
