--- a/Frontend/app/src/main/res/layout/friends_msg_item2.xml
+++ b/Frontend/app/src/main/res/layout/friends_msg_item2.xml
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@null"
+        android:fontFamily="@font/alfa_slab_one"
         android:backgroundTint="#91836e"
         android:text="Username"
         android:textColor="#000000"
@@ -25,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:background="@null"
+        android:fontFamily="@font/alfa_slab_one"
         android:padding="10dp"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
