--- a/Frontend/app/src/main/res/layout/activity_signup_charles.xml
+++ b/Frontend/app/src/main/res/layout/activity_signup_charles.xml
@@ -70,9 +70,10 @@
         android:layout_marginBottom="11dp"
         android:background="@null"
         app:layout_constraintBottom_toTopOf="@+id/signup_login_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signup_password_edt"
-        app:srcCompat="@drawable/sumbitbtn"
-        tools:layout_editor_absoluteX="126dp" />
+        app:srcCompat="@drawable/sumbitbtn" />
 
     <ImageButton
         android:id="@+id/signup_login_btn"
