--- a/Frontend/app/src/main/res/layout/activity_menu.xml
+++ b/Frontend/app/src/main/res/layout/activity_menu.xml
@@ -79,6 +79,7 @@
         app:layout_constraintVertical_bias="0.01999998">
 
         <Button
+            android:id="@+id/game"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginBottom="20dp"
