--- a/Frontend/app/src/main/res/layout/activity_play.xml
+++ b/Frontend/app/src/main/res/layout/activity_play.xml
@@ -514,7 +514,7 @@
             app:layout_constraintEnd_toStartOf="@+id/guideline6"
             app:layout_constraintStart_toStartOf="@+id/guideline7"
             app:layout_constraintTop_toBottomOf="@+id/timerText"
-            app:srcCompat="@drawable/backx" />
+            app:srcCompat="@drawable/deck" />
 
         <!--        exchange mode-->
 <!--        <CheckBox-->
