--- a/Frontend/app/src/main/res/layout/activity_menu.xml
+++ b/Frontend/app/src/main/res/layout/activity_menu.xml
@@ -3,23 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="#974A94 ">
 
-
-
-    <Space
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@+id/central_panel"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="350dp" />
 
     <LinearLayout
         android:id="@+id/side_panel"
         android:layout_width="88dp"
         android:layout_height="wrap_content"
         android:background="@android:drawable/dialog_holo_light_frame"
+        android:backgroundTint="#D9D9D9"
         android:orientation="vertical"
         android:padding="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -79,37 +72,67 @@
         app:layout_constraintTop_toBottomOf="@+id/icon"
         app:layout_constraintVertical_bias="0.01999998">
 
-        <Button
+        <TextView
             android:id="@+id/game"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:text="Play Game"
+            android:background="@drawable/largecirclebtn"
+            android:contentDescription=" "
+            android:gravity="center"
+            android:hapticFeedbackEnabled="true"
+            android:shadowColor="#000000"
+            android:text="GAME"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textStyle="bold"
             tools:ignore="HardcodedText" />
 
-        <Button
+        <TextView
             android:id="@+id/rules_btn"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:text="Rules"
+            android:background="@drawable/largecirclebtn"
+            android:contentDescription=" "
+            android:gravity="center"
+            android:shadowColor="@color/black"
+            android:text="RULES"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textStyle="bold"
             tools:ignore="HardcodedText" />
 
-        <Button
+        <TextView
             android:id="@+id/stats_btn"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:text="Stats"
+            android:background="@drawable/largecirclebtn"
+            android:contentDescription=" "
+            android:gravity="center"
+            android:shadowColor="@color/black"
+            android:text="STATS"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textStyle="bold"
             tools:ignore="HardcodedText" />
 
-        <Button
+        <TextView
             android:id="@+id/friends_button"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:text="Friends"
+            android:background="@drawable/largecirclebtn"
+            android:contentDescription=" "
+            android:gravity="center"
+            android:shadowColor="@color/black"
+            android:text="FRIENDS"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textStyle="bold"
             tools:ignore="HardcodedText" />
+
     </LinearLayout>
 
     <ImageView
