--- a/Frontend/app/src/main/res/layout/activity_stats.xml
+++ b/Frontend/app/src/main/res/layout/activity_stats.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#974A94 "
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="17dp">
 
@@ -14,43 +15,57 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
+        android:backgroundTint="#3F51B5"
         android:gravity="center"
         android:text="Back"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Average_HL" />
 
     <LinearLayout
         android:id="@+id/Wins_HL"
-        android:layout_width="291dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="50dp"
+        android:background="@drawable/largecirclebtn"
         android:orientation="horizontal"
-        android:padding="5dp"
+        android:paddingStart="40dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.425">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/stats_wins"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="center|fill|end"
             android:layout_margin="20px"
-            android:gravity="center"
+            android:gravity="bottom|center|start"
             android:text="Wins:"
+            android:textAlignment="viewStart"
+            android:textColor="#000000"
             android:textSize="18sp" />
 
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/Games_HL"
-        android:layout_width="291dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="50dp"
+        android:background="@drawable/largecirclebtn"
         android:orientation="horizontal"
-        android:padding="5dp"
+        android:paddingStart="40dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Losses_HL">
@@ -59,20 +74,27 @@
             android:id="@+id/stats_games_played"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="center|fill|end"
             android:layout_margin="20px"
-            android:gravity="center"
+            android:gravity="bottom|center|start"
             android:text="Games Played:"
+            android:textAlignment="viewStart"
+            android:textColor="#000000"
             android:textSize="18sp" />
     </LinearLayout>
 
 
     <LinearLayout
         android:id="@+id/Ranking_HL"
-        android:layout_width="291dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="50dp"
+        android:background="@drawable/largecirclebtn"
         android:orientation="horizontal"
-        android:padding="5dp"
+        android:paddingStart="40dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Games_HL">
@@ -81,20 +103,27 @@
             android:id="@+id/stats_rank"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="center|fill|end"
             android:layout_margin="20px"
-            android:gravity="center"
+            android:gravity="bottom|center|start"
             android:text="Rankings:"
+            android:textAlignment="viewStart"
+            android:textColor="#000000"
             android:textSize="18sp" />
 
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/Score_HL"
-        android:layout_width="291dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="50dp"
+        android:background="@drawable/largecirclebtn"
         android:orientation="horizontal"
-        android:padding="5dp"
+        android:paddingStart="40dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Ranking_HL">
@@ -103,20 +132,27 @@
             android:id="@+id/stats_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="center|fill|end"
             android:layout_margin="20px"
-            android:gravity="center"
+            android:gravity="bottom|center|start"
             android:text="Score: "
+            android:textAlignment="viewStart"
+            android:textColor="#000000"
             android:textSize="18sp" />
 
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/Average_HL"
-        android:layout_width="291dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="50dp"
+        android:background="@drawable/largecirclebtn"
         android:orientation="horizontal"
-        android:padding="5dp"
+        android:paddingStart="40dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Score_HL">
@@ -125,10 +161,12 @@
             android:id="@+id/stats_average"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="center|fill|end"
             android:layout_margin="20px"
-            android:gravity="center"
+            android:gravity="bottom|center|start"
             android:text="Average: "
+            android:textAlignment="viewStart"
+            android:textColor="#000000"
             android:textSize="18sp" />
 
     </LinearLayout>
@@ -138,6 +176,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
+        android:backgroundTint="#673AB7"
         android:padding="25dp"
         android:text="Username"
         android:textSize="16sp"
@@ -145,32 +184,41 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.04000002" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/stats_picture"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="100dp"
-        android:layout_marginBottom="20dp"
-        android:scaleType="fitCenter"
-        app:circularflow_defaultRadius="40dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/icon_purple_dark"
+
+        android:focusableInTouchMode="false"
+        android:foregroundGravity="center"
+=        app:circularflow_defaultRadius="40dp"
         app:circularflow_radiusInDP="30dp"
         app:layout_constraintBottom_toTopOf="@+id/Wins_HL"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/stats_user"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.489" />
+
 
     <LinearLayout
         android:id="@+id/Losses_HL"
-        android:layout_width="291dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="50dp"
+        android:background="@drawable/largecirclebtn"
         android:orientation="horizontal"
-        android:padding="5dp"
+        android:paddingStart="40dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Wins_HL">
@@ -179,10 +227,12 @@
             android:id="@+id/stats_losses"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="center|fill|end"
             android:layout_margin="20px"
-            android:gravity="center"
+            android:gravity="bottom|center|start"
             android:text="Losses:"
+            android:textAlignment="viewStart"
+            android:textColor="#000000"
             android:textSize="18sp" />
     </LinearLayout>
 
