--- a/Frontend/app/src/main/res/layout/rank_item.xml
+++ b/Frontend/app/src/main/res/layout/rank_item.xml
@@ -3,8 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
+    android:background="@drawable/largebtn"
     android:orientation="horizontal"
-    android:padding="20dp">
+    android:paddingStart="30dp"
+    android:paddingTop="20dp"
+    android:paddingRight="30dp"
+    android:paddingBottom="40dp">
 
     <TextView
         android:id="@+id/tvRank"
@@ -12,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:text="1"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
         android:textSize="18sp" />
 
     <Button
@@ -36,10 +40,7 @@
         android:background="@null"
         android:gravity="right|end"
         android:padding="10dp"
-        android:textColor="#FFFFFF"
-        android:textColorHighlight="#FFFFFF"
-        android:textColorHint="#FFFDFD"
-        android:textColorLink="#FFFFFF"
+        android:textColor="@color/white"
         android:textSize="16sp" />
 
 </LinearLayout>
